tests/additional/fail/function-return-void.mvm
function void foo(int x) {
    return x;
}

foo(1);
